--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,6 @@
 user=root
 password=
-dburl=jdbc:mysql://localhost:3306/sistema_estacionamento
+dburl=jdbc:mysql://localhost:3306/parking-management-system-java-db
 useSSL=false
+flyway:
+    enabled: true
